# WPT-DLM

./: .dockerignore  .env.example  .gitignore  README-Level 2&3 - Cloud-2.eraserdiagram  README-MQTT Communications-4.eraserdiagram  README-PostgresSQL database-4.eraserdiagram  README-PostgresSQL database-5.eraserdiagram  README-WPT-DLM Architecture-2.eraserdiagram  README-WPT-DLM Communications-3.eraserdiagram  README.md  docker-compose.yaml  pyproject.toml  run_api.py  run_gateway.py  run_gateway_with_vehicle.py
README-Sequence Diagram of /: recommendations-5.eraserdiagram  recommendations-6.eraserdiagram
brain_api/: Dockerfile  main.py
brain_api/api/: __init__.py  charging_request.py  dependencies.py  dlm.py  health.py  hubs.py  nodes.py  qr_code.py  recommendations.py  sessions.py  vehicles.py  ws_telemetry.py
brain_api/core/: config.py  logging.py  websocket_manager.py
brain_api/data_collector/: __init__.py  mqtt_data_collector.py
brain_api/db/: __init__.py  base.py  session.py
brain_api/models/: __init__.py  charging_session.py  charging_session_dbo.py  dlm_event.py  dlm_event_dbo.py  hub.py  hub_dbo.py  node.py  node_dbo.py  vehicle.py  vehicle_dbo.py
brain_api/repositories/: __init__.py  base.py  charging_session.py  dlm_event.py  (+3 more)
core/: __init__.py
dlm-dashboard/: README.md  package.json
docs/: hardware_implementation.md
examples/: dlm_priority_example.py
mobile_app/: .gitignore  pubspec.yaml
scripts/: start_hub.py  start_vehicle.py  vehicle_emulator.py
simulation/: vehicle_emulator.py
smart_objects/: __init__.py  hub.py  vehicle.py
(+150 files in other folders)
