[project]
name = "wpt-dlm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.2",
    "click>=8.1.0",
    "fastapi>=0.123.0",
    "influxdb-client>=1.45.0",
    "gpxpy>=1.6.2",
    "paho-mqtt>=2.1.0",
    "pillow>=12.1.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyyaml>=6.0.3",
    "qrcode>=8.2",
    "smbus2>=0.6.0",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "isort>=7.0.0",
]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
